--- a/_posts/2024-08-21-二叉树.md
+++ b/_posts/2024-08-21-二叉树.md
@@ -9,8 +9,60 @@ layout: post
 
 “二叉树” 是数据结构中非常核心的内容，常见于各种算法题，特别是在递归、动态规划、图算法等领域有广泛应用。
 
-## 树的实现
+## 树的基本概念
 
+树（Tree）是一种常见的数据结构，用来表示 **层次关系（hierarchy）**。
+
+**树的定义**：
+
+树是由若干节点（Node）组成的集合，其中：
+* 有一个特殊的节点称为 **根（Root）**。
+* 除根节点外的其他节点都有且只有一个 **父节点（Parent）**。
+* 每个节点可以有零个或多个 **子节点（Child）**。
+* 没有子节点的节点称为 **叶子节点（Leaf）**。
+
+**树的常用术语**：
+* **深度（Depth）**：从根到该节点的路径长度。
+* **高度（Height）**：从该节点到叶子的最长路径长度。
+* **度（Degree）**：一个节点的子节点个数。
+* **子树（Subtree）**：某个节点和它的所有后代组成的树。
+
+---
+
+### 二叉树
+
+二叉树（Binary Tree）是最常见的一类树。
+
+* **定义**：二叉树是指 **每个节点最多有两个子节点** 的树，分别称为 **左子树** 和 **右子树**。
+* 特点：左右子树有顺序之分，不能随意调换。
+
+**二叉树的几类特殊情况**
+
+1. **满二叉树（Full Binary Tree）**
+   每一层的节点数都达到最大值，即所有非叶子节点都有两个子节点。
+
+2. **完全二叉树（Complete Binary Tree）**
+
+   * 除最后一层外，其他层都是满的；
+   * 最后一层的节点都靠左连续排列。
+   * 常见于 **堆（Heap）** 的实现。
+
+3. **二叉搜索树（BST, Binary Search Tree）**
+
+   * 左子树所有节点值 < 根节点值；
+   * 右子树所有节点值 > 根节点值；
+   * 中序遍历结果是升序序列。
+
+4. **平衡二叉树（Balanced Binary Tree）**
+
+   * 任意节点的左右子树高度差 ≤ 1；
+   * 常见实现：AVL 树、红黑树（Red-Black Tree）。
+
+---
+
+**二叉树的存储方式**
+
+1. **链式存储**（常见）
 ```python
 class TreeNode:
     def __init__(self, val=0, left=None, right=None):
@@ -18,6 +70,14 @@ class TreeNode:
         self.left = left
         self.right = right
 ```
+
+2. **顺序存储**（完全二叉树可用数组表示）
+* 下标从 1 开始：
+  * 左子节点下标 = 2\*i
+  * 右子节点下标 = 2\*i + 1
+* 常见于堆（Heap）的实现。
+
+---
 
 ### 二叉查找树
 
@@ -29,6 +89,8 @@ Binary Search Tree，也称为**[二叉搜索树](https://zh.wikipedia.org/wiki/
 4. 没有键值相等的节点。
 
 二叉查找树**中序遍历**结果**有序**。
+
+---
 
 ### 红黑树
 
@@ -46,7 +108,9 @@ Binary Search Tree，也称为**[二叉搜索树](https://zh.wikipedia.org/wiki/
 
 ![1920px-Red-black_tree_example.svg]({{ site.baseurl }}/assets/images/1920px-Red-black_tree_example.svg.png)
 
-## 遍历
+
+
+## 访问/遍历
 
 ### 层次遍历
 
@@ -217,7 +281,16 @@ class Solution:
 
 ---
 
+### 经典例题
+- [98. 验证二叉搜索树](https://leetcode.cn/problems/validate-binary-search-tree/)
+- [230. 二叉搜索树中第 K 小的元素](https://leetcode.cn/problems/kth-smallest-element-in-a-bst/)
+- [199. 二叉树的右视图](https://leetcode.cn/problems/binary-tree-right-side-view/)
+
+
+
 ## 递归/分治
+
+### 方法介绍
 
 树是**天然的递归结构**：每个节点的子树本身就是一棵树，因此大多数与树相关的问题，都可以通过 **递归 / 分治** 来解决。
 
@@ -277,11 +350,14 @@ $$
 
 ---
 
-### [104. 二叉树的最大深度](https://leetcode.cn/problems/maximum-depth-of-binary-tree/)
+### 例题讲解
 
-**题目：**
+#### [104. 二叉树的最大深度](https://leetcode.cn/problems/maximum-depth-of-binary-tree/)
+
+```text
 给定一个二叉树 root ，返回其最大深度。
 二叉树的 最大深度 是指从根节点到最远叶子节点的最长路径上的节点数。
+```
 
 ```python
 class Solution:
@@ -295,24 +371,23 @@ class Solution:
 
 ---
 
-### [110. 平衡二叉树](https://leetcode.cn/problems/balanced-binary-tree/)
+#### [110. 平衡二叉树](https://leetcode.cn/problems/balanced-binary-tree/)
 
-**题目：**
+```text
 给定一个二叉树，判断它是否是平衡二叉树。
+```
 
 ```python
 class Solution:
     def isBalanced(self, root: Optional[TreeNode]) -> bool:
-        def get_height(node):
+        def get_height(node: Optional[TreeNode]) -> int:
             if node is None:
                 return 0
-            left_height = get_height(node.left)
-            if left_height == -1:
+            left_h = get_height(node.left)
+            right_h = get_height(node.right)
+            if left_h == -1 or right_h == -1 or abs(left_h - right_h) > 1:
                 return -1
-            right_height = get_height(node.right)
-            if right_height == -1 or abs(left_height - right_height) > 1:
-                return -1
-            return max(left_height, right_height) + 1
+            return max(left_h, right_h) + 1
         return get_height(root) != -1
 ```
 
@@ -321,7 +396,22 @@ class Solution:
 
 ---
 
+### 经典例题
+
+- [101. 对称二叉树](https://leetcode.cn/problems/symmetric-tree/)
+- [114. 二叉树展开为链表](https://leetcode.cn/problems/flatten-binary-tree-to-linked-list/)
+- [226. 翻转二叉树](https://leetcode.cn/problems/invert-binary-treea)
+
+**二叉树的构造：**
+通常是根据遍历结果进行递归/分治。
+
+- [108. 将有序数组转换为二叉搜索树](https://leetcode.cn/problems/convert-sorted-array-to-binary-search-tree/)
+
+
+
 ## 回溯/路径搜索
+
+### 方法介绍
 
 二叉树的「回溯 / 路径搜索」问题，通常都围绕 **“从根到叶的一条路径”** 展开。
 
@@ -365,7 +455,7 @@ def dfs(node, path):
     path.pop()
 ```
 
-关键点：**进入节点时加入，离开节点时移除**。这就是「回溯」思想。
+> 关键点：**进入节点时加入，离开节点时移除**。这就是「回溯」思想。
 
 ---
 
@@ -393,11 +483,14 @@ def dfs(node, path):
 
 ---
 
-### [257. 二叉树的所有路径](https://leetcode.cn/problems/binary-tree-paths/)
+### 例题讲解
 
-**题目**：
+#### [257. 二叉树的所有路径](https://leetcode.cn/problems/binary-tree-paths/)
+
+```text
 给你一个二叉树的根节点 root ，按 任意顺序 ，返回所有从根节点到叶子节点的路径。
 叶子节点 是指没有子节点的节点。
+```
 
 **思路要点**：
 * `path` 维护一条从根到当前节点的路径。
@@ -410,16 +503,14 @@ class Solution:
     def binaryTreePaths(self, root: Optional[TreeNode]) -> List[str]:
         ans = []
         path = []
-
         def dfs(node):
             if node is None:
                 return
             path.append(str(node.val))
             if node.left is None and node.right is None:
                 ans.append("->".join(path))
-            else:
-                dfs(node.left)
-                dfs(node.right)
+            dfs(node.left)
+            dfs(node.right)
             path.pop()
         dfs(root)
         return ans
@@ -427,11 +518,12 @@ class Solution:
 
 ---
 
-### [113. 路径总和 II](https://leetcode.cn/problems/path-sum-ii/)
+#### [113. 路径总和 II](https://leetcode.cn/problems/path-sum-ii/)
 
-**题目**：
+```text
 给你二叉树的根节点 root 和一个整数目标和 targetSum ，找出所有 从根节点到叶子节点 路径总和等于给定目标和的路径。
 叶子节点 是指没有子节点的节点。
+```
 
 **思路要点**：
 * `left` 记录剩余和。
@@ -450,9 +542,8 @@ class Solution:
             left -= node.val
             if node.left is None and node.right is None and left == 0:
                 ans.append(path.copy())
-            else:
-                dfs(node.left, left)
-                dfs(node.right, left)
+            dfs(node.left, left)
+            dfs(node.right, left)
             path.pop()
         dfs(root, targetSum)
         return ans
@@ -460,48 +551,14 @@ class Solution:
 
 ---
 
-### [437. 路径总和 III](https://leetcode.cn/problems/path-sum-iii/)
-
-**题目**：
-给定一个二叉树的根节点 root ，和一个整数 targetSum ，求该二叉树里节点值之和等于 targetSum 的 路径 的数目。
-
-路径 不需要从根节点开始，也不需要在叶子节点结束，但是路径方向必须是向下的（只能从父节点到子节点）。
-
-**思路要点**：
-* 这种题更偏 **前缀和 + 回溯**，需要在递归中维护状态。
-* 写法复杂，但本质依旧是路径搜索。
-
-```python
-class Solution:
-    def pathSum(self, root: Optional[TreeNode], targetSum: int) -> int:
-        ans = 0
-        cnt = defaultdict(int)
-        cnt[0] = 1
-
-        def dfs(node: Optional[TreeNode], s: int) -> None:
-            if node is None:
-                return
-
-            nonlocal ans
-            s += node.val
-            # 把 node 当作路径的终点，统计有多少个起点
-            ans += cnt[s - targetSum]
-
-            cnt[s] += 1
-            dfs(node.left, s)
-            dfs(node.right, s)
-            cnt[s] -= 1  # 恢复现场
-
-        dfs(root, 0)
-        return ans
-```
-
----
+### 经典例题
+- [437. 路径总和 III](https://leetcode.cn/problems/path-sum-iii/)
 
 
----
 
 ## 树形DP
+
+### 方法介绍
 
 树形 DP 是一种 **在树结构上进行动态规划** 的方法。
 
@@ -532,40 +589,139 @@ $$
 
 ---
 
-**常见的树形 DP 模式**
+**常见的树形 DP 模式1：子树信息统计类**
 
-一、节点选或不选类（树上独立集）
+* 问题特点：
+  父节点的答案依赖于子节点的统计结果。每次递归只需合并子树结果即可。
 
-* **状态**：
+* 常见问题：
 
-  * $f(u, 0)$：节点 $u$ 不选的最优解
-  * $f(u, 1)$：节点 $u$ 选的最优解
-* **转移**：
+  * 统计子树大小
+  * 计算树的高度 / 深度
+  * 子树权值和
 
-  * 若 $u$ 选，则子节点不能选。
-  * 若 $u$ 不选，则子节点可自由选。
+* 解法思路：
 
-这种问题常用于「树形打家劫舍 / 最大独立集」。
+  1. DFS 遍历整棵树。
+  2. 在回溯阶段，利用子节点的结果更新父节点的值。
+  3. 最终根节点存储整个树的答案。
 
-二、子树信息统计类
+* 示例代码（树高度）：
 
-* 例如：子树大小、子树高度、子树路径和。
-* 只需要递归子树，累加或取最大值即可。
+```python
+def tree_height(root):
+    if not root:
+        return 0
+    left = tree_height(root.left)
+    right = tree_height(root.right)
+    return max(left, right) + 1
+```
 
-这是最简单的树形 DP：**父节点的值依赖于子节点的结果**。
+---
 
-三、树上的路径/直径问题
+**常见的树形 DP 模式2：树上的路径 / 直径问题**
 
-* 直径 = 两条子树路径的最大和。
-* 常见方法：在计算子树深度的同时，用两个最大子树路径拼接更新答案。
+* 问题特点：
+  父节点答案不仅依赖子节点，还可能需要 拼接多个子树结果。
 
-四、树上背包类
+* 常见问题：
 
-* 在树的结构上做「背包问题」。
-* 父节点容量固定，要从子节点选择若干方案合并。
-* 通常用 **DFS + 背包 DP 转移**。
+  * 树的直径（两点之间的最长路径）
+  * 二叉树最大路径和
 
-这是最难的树形 DP 类型，常见于「分组背包在树上的扩展」。
+* 解法思路：
+
+  1. 在 DFS 过程中，返回「从该节点向下的最长路径长度」。
+  2. 同时用两个子树的路径拼接，尝试更新全局最大值。
+  3. 递归返回时，父节点取单边最长路径。
+
+* 示例代码（树直径）：
+
+```python
+diameter = 0
+
+def dfs(u):
+    global diameter
+    if not u:
+        return 0
+    left = dfs(u.left)
+    right = dfs(u.right)
+    diameter = max(diameter, left + right)  # 更新直径
+    return max(left, right) + 1
+```
+
+---
+
+**常见的树形 DP 模式3：节点选或不选类（树上独立集）**
+
+* 问题特点：
+  涉及「选 / 不选」状态，父节点的选择影响子节点的选择。
+
+* 常见问题：
+
+  * 树形打家劫舍（LeetCode 337）
+  * 最大独立集（图论经典问题）
+
+* 解法思路：
+
+  1. 定义状态：
+
+     * \$f(u,0)\$：不选 \$u\$ 的最优解
+     * \$f(u,1)\$：选 \$u\$ 的最优解
+  2. 转移：
+
+     * 如果选 \$u\$，则子节点不能选。
+     * 如果不选 \$u\$，子节点可自由选择。
+  3. 递归处理所有子树。
+
+* 示例代码（打家劫舍 III）：
+
+```python
+def dfs(u):
+    if not u:
+        return (0, 0)  # (不选u, 选u)
+    left = dfs(u.left)
+    right = dfs(u.right)
+
+    not_pick = max(left) + max(right)   # u不选，孩子自由
+    pick = u.val + left[0] + right[0]   # u选，孩子不能选
+
+    return (not_pick, pick)
+
+res = max(dfs(root))
+```
+
+---
+
+**常见的树形 DP 模式4：树上背包类**
+
+* 问题特点：
+  树的结构与背包问题结合，父节点容量固定，需要对子树方案进行「合并」。
+
+* 常见问题：
+
+  * 树形背包问题（选子树中的若干节点，容量限制）
+  * 树上分组背包
+
+* 解法思路：
+
+  1. 用 DFS 遍历子树。
+  2. 每个子树返回一个「容量 → 最大价值」的数组。
+  3. 父节点合并子节点的 DP 数组（类似背包的卷积）。
+  4. 注意需要从大到小循环，以避免重复选择。
+
+* 示例代码（简化版树上背包）：
+
+```python
+def dfs(u, capacity):
+    dp = [0] * (capacity + 1)  # dp[i] = 最大价值
+    for v in u.children:
+        child_dp = dfs(v, capacity)
+        for c in range(capacity, -1, -1):     # 当前容量
+            for k in range(c+1):              # 分配给子树的容量
+                dp[c] = max(dp[c], dp[c-k] + child_dp[k])
+    return dp
+```
 
 ---
 
@@ -583,29 +739,9 @@ $$
 
 ---
 
-### [124. 二叉树中的最大路径和](https://leetcode.cn/problems/binary-tree-maximum-path-sum/)
+### 例题讲解
 
-```text
-二叉树中的 路径 被定义为一条节点序列，序列中每对相邻节点之间都存在一条边。同一个节点在一条路径序列中 至多出现一次 。该路径 至少包含一个 节点，且不一定经过根节点。
-
-路径和 是路径中各节点值的总和。
-
-给你一个二叉树的根节点 root ，返回其 最大路径和 。
-```
-
-* 定义 `f(u)` = 以 `u` 为根的子树，**从 `u` 出发的最大路径和**。
-* 转移：
-
-  ```
-  f(u) = max(0, f(left)) + max(0, f(right)) + u.val
-  ```
-
-  （如果子树贡献为负，就不要它）
-* 全局维护最大值。
-
----
-
-### [543. 二叉树的直径](https://leetcode.cn/problems/diameter-of-binary-tree/)
+#### [543. 二叉树的直径](https://leetcode.cn/problems/diameter-of-binary-tree/)
 
 ```text
 给你一棵二叉树的根节点，返回该树的 直径 。
@@ -634,5 +770,52 @@ class Solution:
         dfs(root)
         return ans
 ```
+
+---
+
+#### [124. 二叉树中的最大路径和](https://leetcode.cn/problems/binary-tree-maximum-path-sum/)
+
+```text
+二叉树中的 路径 被定义为一条节点序列，序列中每对相邻节点之间都存在一条边。同一个节点在一条路径序列中 至多出现一次 。该路径 至少包含一个 节点，且不一定经过根节点。
+
+路径和 是路径中各节点值的总和。
+
+给你一个二叉树的根节点 root ，返回其 最大路径和 。
+```
+
+定义 `f(u)` = 以 `u` 为根的子树，**从 `u` 出发的最大路径和**。
+
+转移方程：
+```
+f(u) = max(0, f(left)) + max(0, f(right)) + u.val
+```
+
+实现细节：
+- 如果子树贡献为负，就不要它
+- 全局维护最大值
+
+```python
+class Solution:
+    def maxPathSum(self, root: Optional[TreeNode]) -> int:
+        ans = -inf
+        def dfs(node: Optional[TreeNode]) -> int:
+            if node is None:
+                return 0  # 没有节点，和为 0
+            l_val = dfs(node.left)  # 左子树最大链和
+            r_val = dfs(node.right)  # 右子树最大链和
+            nonlocal ans
+            ans = max(ans, l_val + r_val + node.val)  # 两条链拼成路径
+            return max(max(l_val, r_val) + node.val, 0)  # 当前子树最大链和（注意这里和 0 取最大值了）
+        dfs(root)
+        return ans
+```
+
+---
+
+### 经典例题
+- [2246. 相邻字符不同的最长路径](https://leetcode.cn/problems/longest-path-with-different-adjacent-characters/)
+- [687. 最长同值路径](https://leetcode.cn/problems/longest-univalue-path/description/)
+- [1617. 统计子树中城市之间最大距离](https://leetcode.cn/problems/count-subtrees-with-max-distance-between-cities/)
+- [2539. 最大价值和与最小价值和的差值](https://leetcode.cn/problems/difference-between-maximum-and-minimum-price-sum/)
 
 ---
