two-dim pre_sum

--- a/_posts/2024-06-22-前缀和_差分_树状_线段树.md
+++ b/_posts/2024-06-22-前缀和_差分_树状_线段树.md
@@ -84,6 +84,99 @@ print(prefix[r+1] - prefix[l])  # 输出 11
 
 ---
 
+### 二维前缀和
+
+定义二维矩阵 `a`：
+
+$$
+a =
+\begin{bmatrix}
+1 & 2 & 3 \\
+4 & 5 & 6 \\
+7 & 8 & 9
+\end{bmatrix}
+$$
+
+定义：
+
+$$
+sum[i+1][j+1]
+$$
+
+表示左上角为 $a[0][0]$，右下角为 $a[i][j]$ 的子矩阵元素和。
+
+> 采用这种定义方式，无需单独处理第一行/第一列的元素和。
+
+---
+
+**如何初始化二维前缀和？**
+
+初始化公式如下：
+
+$$
+sum[i+1][j+1] = sum[i+1][j] + sum[i][j+1] - sum[i][j] + a[i][j]
+$$
+
+
+推导过程证明：
+
+以 $a[2][2] = 9$ 为例：
+
+$$
+sum[3][3] =
+\underbrace{sum[3][2]}_{\text{左边子矩阵}}
++ \underbrace{sum[2][3]}_{\text{上方子矩阵}}
+- \underbrace{sum[2][2]}_{\text{重复部分}}
++ a[2][2]
+$$
+
+<img src="{{ site.baseurl }}/assets/images/two-dim-pre-sum1.png" alt="二维前缀和样例1" style="width:800px; height:auto;" />
+
+---
+
+**如何计算任意子矩阵元素和？**
+
+例如计算子矩阵`b`：
+
+$$
+\begin{bmatrix}
+\mathbf{5} & \mathbf{6} \\
+\mathbf{8} & \mathbf{9}
+\end{bmatrix}
+$$
+
+对应原矩阵`a`：
+
+$$
+\begin{bmatrix}
+1 & 2 & 3 \\
+4 & \mathbf{5} & \mathbf{6} \\
+7 & \mathbf{8} & \mathbf{9}
+\end{bmatrix}
+$$
+
+其中：
+
+* 子矩阵左上角为 $a[r1][c1]$
+* 子矩阵右下角为 $a[r2-1][c2-1]$
+
+推导过程：
+
+* 取右下角前缀和 `sum[r2][c2]`
+* 减去上方部分 `sum[r1][c2]`
+* 减去左边部分 `sum[r2][c1]`
+* 由于左上角区域被多减了一次，需要加回来 `sum[r1][c1]`
+
+公式：
+
+$$
+submatrix\_sum = sum[r2][c2] - sum[r2][c1] - sum[r1][c2] + sum[r1][c1]
+$$
+
+<img src="{{ site.baseurl }}/assets/images/two-dim-pre-sum2.png" alt="二维前缀和样例1" style="width:800px; height:auto;" />
+
+---
+
 ### 经典例题
 - [560. 和为 K 的子数组](https://leetcode.cn/problems/subarray-sum-equals-k/)
 - [303. 区域和检索 - 数组不可变](https://leetcode.cn/problems/range-sum-query-immutable/)
