--- a/_posts/2024-02-21-哈希表_双指针_滑动窗口.md
+++ b/_posts/2024-02-21-哈希表_双指针_滑动窗口.md
@@ -157,5 +157,6 @@ for key, value in hash_map.items():
 - [438. 找到字符串中所有字母异位词](https://leetcode.cn/problems/find-all-anagrams-in-a-string/)
 - [3439. 重新安排会议得到最多空余时间 I](https://leetcode.cn/problems/reschedule-meetings-for-maximum-free-time-i/)
 - [3634. 使数组平衡的最少移除数目](https://leetcode.cn/problems/minimum-removals-to-balance-array/)
+- [1493. 删掉一个元素以后全为 1 的最长子数组](https://leetcode.cn/problems/longest-subarray-of-1s-after-deleting-one-element/)
 
 ---
