--- a/_posts/2024-06-22-前缀和_差分_树状_线段树.md
+++ b/_posts/2024-06-22-前缀和_差分_树状_线段树.md
@@ -256,6 +256,12 @@ for i in range(1, n):
 
 ---
 
+### 经典例题
+- [1094. 拼车](https://leetcode.cn/problems/car-pooling/)
+- [2327. 知道秘密的人数](https://leetcode.cn/problems/number-of-people-aware-of-a-secret/)
+
+---
+
 ## 树状数组
 
 树状数组是一个一维数组（通常称为 `tree` 或 `bit`），它本质上是对原始数组的前缀和进行“分块压缩”保存，使得我们可以在 `O(log n)` 的时间内：
