--- a/_posts/think-n-code/2025-06-01-Pythonic编程.md
+++ b/_posts/think-n-code/2025-06-01-Pythonic编程.md
@@ -217,3 +217,152 @@ else:
 * 如果 `for` 循环跑完没 `break`，说明找不到因子，是质数，于是执行 `else`。
 
 ---
+
+### iter/next用法
+
+`iter()` 和 `next()` 在 Python 中是构建 **迭代器模式** 的核心，很多看似“自动”的语法糖（比如 `for` 循环、生成器）其实背后都用到它们。
+
+---
+
+**底层原理**
+
+虽然我们平时写：
+
+```python
+for x in [1, 2, 3]:
+    print(x)
+```
+
+但其实等价于：
+
+```python
+it = iter([1, 2, 3])  # 获取迭代器
+while True:
+    try:
+        x = next(it)  # 取下一个元素
+        print(x)
+    except StopIteration:
+        break
+```
+
+---
+
+**常用场景：**
+
+1. 手动控制迭代过程
+
+当你不想用 `for`，而是一步步获取数据时：
+
+```python
+nums = [10, 20, 30]
+it = iter(nums)
+
+print(next(it))  # 10
+print(next(it))  # 20
+# 可以随时停下来
+```
+
+> 用处：逐步调试、在需要惰性取值的场景（比如流式数据处理）。
+
+---
+
+2. 从流/文件中逐行读取（懒加载）
+
+```python
+with open("data.txt") as f:
+    it = iter(f)   # 文件对象本身就是迭代器
+    for line in it:
+        print(line.strip())
+```
+
+> 用处：大文件处理，避免一次性读入内存。
+
+---
+
+3. `iter(callable, sentinel)` 模式
+
+```python
+# 从输入读取，直到遇到 "quit"
+it = iter(input, "quit")
+for line in it:
+    print("输入：", line)
+```
+
+> 用处：**代替 while True + break**，在“读到某个终止值时停止”。
+
+---
+
+4. 生成器表达式 + `next()`（快速取值）
+
+```python
+nums = [0, 4, 0, 5, 6]
+
+first_nonzero = next(x for x in nums if x != 0)
+print(first_nonzero)  # 4
+```
+
+> 用处：从序列里快速找到**第一个满足条件的值**。
+
+---
+
+5. `next(it, default)` 防止异常
+
+```python
+it = iter([1, 2])
+print(next(it, None))  # 1
+print(next(it, None))  # 2
+print(next(it, None))  # None (不会抛 StopIteration)
+```
+
+> 用处：想安全取值，不想写 try/except。
+
+---
+
+### count(1)用法
+
+你问的 `count(1)` 是 **`itertools.count(1)`**，它不是内置函数，而是 Python 标准库 `itertools` 提供的一个工具。
+
+---
+
+基本用法
+
+```python
+from itertools import count
+
+for i in count(1):
+    print(i)
+    if i > 5:
+        break
+```
+
+输出：
+
+```
+1, 2, 3, 4, 5, 6
+```
+
+`count(start, step=1)` 会返回一个 **无限迭代器**：
+
+* `start`：起始值（比如 `1`）。
+* `step`：步长（默认为 `1`）。
+
+---
+
+**带步长**
+
+```python
+from itertools import count
+
+for i in count(10, 2):  # 从10开始，每次+2
+    print(i)
+    if i > 20:
+        break
+```
+
+输出：
+
+```
+10, 12, 14, 16, 18, 20, 22
+```
+
+---
