--- a/_posts/think-n-code/2025-06-01-Pythonic编程.md
+++ b/_posts/think-n-code/2025-06-01-Pythonic编程.md
@@ -249,7 +249,7 @@ while True:
 
 **常用场景：**
 
-1. 手动控制迭代过程
+**手动控制迭代过程**
 
 当你不想用 `for`，而是一步步获取数据时：
 
@@ -266,7 +266,7 @@ print(next(it))  # 20
 
 ---
 
-2. 从流/文件中逐行读取（懒加载）
+**从流/文件中逐行读取（懒加载）**
 
 ```python
 with open("data.txt") as f:
@@ -279,7 +279,7 @@ with open("data.txt") as f:
 
 ---
 
-3. `iter(callable, sentinel)` 模式
+**`iter(callable, sentinel)` 模式**
 
 ```python
 # 从输入读取，直到遇到 "quit"
@@ -292,7 +292,7 @@ for line in it:
 
 ---
 
-4. 生成器表达式 + `next()`（快速取值）
+**生成器表达式 + `next()`（快速取值）**
 
 ```python
 nums = [0, 4, 0, 5, 6]
@@ -305,7 +305,7 @@ print(first_nonzero)  # 4
 
 ---
 
-5. `next(it, default)` 防止异常
+**`next(it, default)` 防止异常**
 
 ```python
 it = iter([1, 2])
@@ -348,7 +348,7 @@ for i in count(1):
 
 ---
 
-**带步长**
+**带步长的用法**
 
 ```python
 from itertools import count
