--- a/_posts/think-n-code/2025-08-09-Python集合.md
+++ b/_posts/think-n-code/2025-08-09-Python集合.md
@@ -424,3 +424,175 @@ print(c1 | c2)  # 并集（计数取最大值）=> Counter({'a': 3, 'b': 2})
 | 比较频率是否相等    | ✅（可直接 `==`）         | ❌（需写比较逻辑）                |
 
 ---
+
+## sortedcontainers
+
+`sortedcontainers` 是一个高性能的 **有序数据结构库**，它提供了 **自动保持有序** 的容器，和标准库里的 `list`, `dict`, `set` 类似，但区别是：
+
+* 标准的 `list/dict/set` 插入后 **不保证有序**。
+* `sortedcontainers` 会在插入、删除时自动维护排序。
+* 内部实现基于 **分块数组（list of lists）**，避免了树结构的复杂性，同时性能优异。
+
+| 结构   | 标准库                    | sortedcontainers 替代    |
+| ---- | ---------------------- | ---------------------- |
+| List | `list` (无序插入)          | `SortedList`（自动排序）     |
+| Set  | `set` (无序)             | `SortedSet`（有序集合）      |
+| Dict | `dict` (>=3.7插入顺序，非排序) | `SortedDict`（按 key 排序） |
+
+安装：
+
+```bash
+pip install sortedcontainers
+```
+
+---
+
+### SortedList
+
+* 类似 Python 的 `list`，但始终保持有序。
+* 支持二分查找、切片、快速查找区间。
+* 复杂度：
+
+  * 插入、删除：`O(log n)`
+  * 索引、切片：`O(log n)`
+  * 遍历：`O(n)`
+
+示例：
+
+```python
+from sortedcontainers import SortedList
+
+sl = SortedList([5, 1, 3])
+print(sl)       # SortedList([1, 3, 5])
+
+sl.add(2)
+print(sl)       # SortedList([1, 2, 3, 5])
+
+print(sl[0])    # 1
+print(sl.bisect_left(3))  # 2 (3的位置)
+```
+
+---
+
+### SortedSet
+
+* 类似 `set`，但是有序且支持索引。
+* 自动去重，并保持排序。
+* 内部其实是 `SortedList` 的包装。
+
+示例：
+
+```python
+from sortedcontainers import SortedSet
+
+ss = SortedSet([5, 1, 3, 3])
+print(ss)      # SortedSet([1, 3, 5])
+
+ss.add(2)
+print(ss)      # SortedSet([1, 2, 3, 5])
+
+print(ss[1])   # 2
+```
+
+---
+
+### SortedDict
+
+* 类似 `dict`，但是 key 始终保持有序。
+* 遍历时按照 key 的顺序。
+* 类似 Java 的 `TreeMap`。
+
+示例：
+
+```python
+from sortedcontainers import SortedDict
+
+sd = SortedDict()
+sd['b'] = 2
+sd['a'] = 1
+sd['c'] = 3
+
+print(sd)          # SortedDict({'a': 1, 'b': 2, 'c': 3})
+print(sd.keys())   # SortedKeysView(SortedDict({'a': 1, 'b': 2, 'c': 3}))
+print(sd.peekitem(0))  # ('a', 1)
+```
+
+---
+
+**应用场景**
+
+* **有序数据维护**：实时保持排序（比 `sort()` 更高效）。
+* **滑动窗口**：比如“中位数维护”问题（LeetCode 高频）。
+* **区间查找**：快速二分查找。
+* **LRU、排名系统**：可以根据顺序快速获取前 k 或后 k 个元素。
+
+---
+
+### 对比`SortedList`和`heapq`
+
+**概括：**
+
+* **`heapq`**：适合 **动态获取最小值/最大值**，比如优先队列、Dijkstra 算法、调度任务。
+* **`SortedList`**：适合需要 **全局有序视图** 的情况，比如排名统计、二分查找、第 k 小元素、区间查询。
+
+可以这么理解：
+
+* 只关心“堆顶” → 用 **`heapq`**。
+* 关心“全局顺序/任意排名” → 用 **`SortedList`**。
+
+---
+
+**共性**
+
+* 都可以处理一组数字/元素。
+* 都能支持插入和取出「某些有序位置」的元素。
+* 都是 Python 里常见的“有序容器”解决方案。
+
+---
+
+**核心区别**
+
+| 特性        | `SortedList` (`sortedcontainers`)   | `heapq`（最小堆）     |
+| --------- | ----------------------------------- | ---------------- |
+| 数据结构      | 动态数组 + 二分查找                         | 二叉堆（数组实现）        |
+| 是否全局有序    | 全部保持有序                              | 只保证堆顶最小          |
+| 插入复杂度     | O(log n) 插入 + O(n) 移动 → 均摊接近 O(log n) | O(log n)         |
+| 删除最小值     | O(1)（取第一个元素）                        | O(log n)（heappop） |
+| 删除任意元素    | O(log n + n)（二分查找 + 删除）             | 不支持，需要线性查找 O(n)  |
+| 查找第 k 小元素 | O(1)（直接索引）                          | O(n log k) 或堆转排序 |
+| 遍历        | 升序遍历 O(n)                           | 无序，只能 pop 出来才能得到排序结果 |
+| 应用场景      | 需要全局有序视图（排名、区间查询、二分搜索）              | 只关心最小值/最大值（优先队列、调度） |
+
+---
+
+### 与Java集合框架的对应
+
+Java 标准库（`java.util`）里已经有对应的“有序”集合：
+
+| Python       | Java 对应 | 底层实现   | 是否有序     | 备注                  |
+| ------------ |---------| ------ | -------- |---------------------|
+| `SortedList` | 无       | 动态数组/堆 | 不自动排序    | Java 没有内置自动排序的 List |
+| `SortedSet`  | `TreeSet` | 红黑树    | 始终有序     | 相当于 `SortedSet`     |
+| `SortedDict` | `TreeMap` | 红黑树    | key 始终有序 | 相当于 `SortedDict`    |
+
+---
+
+**对比解析**
+
+* **`SortedSet` vs `TreeSet`**
+
+  * 两者都保证元素不重复 & 有序。
+  * Python 用 **动态数组 + 二分** 实现，Java 用 **红黑树** 实现。
+  * 复杂度：Python 插入 O(log n) + 移动 O(n)（整体接近 O(log n) 均摊），Java 插入严格 O(log n)。
+
+* **`SortedDict` vs `TreeMap`**
+
+  * 两者都保证 key 有序。
+  * API 上也非常接近，比如 `firstKey()` / `lastKey()` / `subMap()`。
+
+* **`SortedList`**
+
+  * Java 没有直接对应的容器。
+  * 但可以用 `ArrayList` + `Collections.binarySearch()` + 手动插入，或者用 `PriorityQueue`（堆，但只能保证堆顶有序，不是全局排序）。
+
+---
