--- a/_posts/2024-02-21-哈希表_双指针_滑动窗口.md
+++ b/_posts/2024-02-21-哈希表_双指针_滑动窗口.md
@@ -85,6 +85,8 @@ for key, value in hash_map.items():
 
 ### 经典例题
 - [128. 最长连续序列](https://leetcode.cn/problems/longest-consecutive-sequence/)
+- [966. 元音拼写检查器](https://leetcode.cn/problems/vowel-spellchecker/)
+- 【有序集合】[1912. 设计电影租借系统](https://leetcode.cn/problems/design-movie-rental-system/)
 
 ---
 
