--- a/_posts/2024-06-21-栈_队列_单调栈_堆.md
+++ b/_posts/2024-06-21-栈_队列_单调栈_堆.md
@@ -171,6 +171,7 @@ def next_greater(nums):
 * [84. 柱状图中最大的矩形](https://leetcode.cn/problems/largest-rectangle-in-histogram/)
 * [42. 接雨水](https://leetcode.cn/problems/trapping-rain-water/)
 * [239. 滑动窗口最大值](https://leetcode.cn/problems/sliding-window-maximum/)
+* [2197. 替换数组中的非互质数](https://leetcode.cn/problems/replace-non-coprime-numbers-in-array/description/)
 
 ---
 
@@ -231,6 +232,118 @@ heapq.heappush(max_heap, -2)
 
 ---
 
+### 懒删除堆（Lazy Deletion Heap）
+
+在使用 **堆（heapq）** 作为优先队列时，经常会遇到两个麻烦：
+
+1. **删除指定元素**：`heapq` 只能删除堆顶，不能直接删除堆中任意元素。
+2. **更新元素**：如果某个元素的优先级（关键字）发生变化，需要把它更新为新值，但堆里还留着旧值。
+
+如果我们硬要“中途删除”，需要在堆里查找并重新调整，这会导致 **O(n)** 的复杂度，丢掉了堆的高效性。
+
+于是有了一个经典技巧：**懒删除（Lazy Deletion）**。
+
+---
+
+**懒删除的思路很简单：**
+
+* **插入新值**：照常 `heappush`。
+* **删除某个值**：不动堆，只在一个 `dict` 或 `set` 里标记该值“已删除”。
+* **取堆顶/弹出**：如果堆顶值已经被标记删除，就丢掉它，继续弹下一个。
+
+换句话说，堆中可能存在“过期元素”，但我们不急着清理它们，直到它们出现在堆顶时，才真正删除。
+
+---
+
+**应用场景**
+
+**1. 最短路径（Dijkstra、A\*）**
+
+在 Dijkstra 算法中，某个节点的距离可能被更新多次。
+
+* 旧的距离我们没法直接从堆里删除。
+* 采用懒删除：直接 push 新距离，等旧值被 pop 出来时，如果发现它不是“当前最优值”，就丢弃。
+
+这是 Dijkstra 常见的 Python 实现方式。
+
+---
+
+**2. 滑动窗口最值**
+
+例如：维护一个长度为 `k` 的滑动窗口，要求随时输出最大值。
+
+* 窗口滑动时，移出的元素标记为“删除”。
+* 窗口新加入的元素 push 到堆。
+* 每次取堆顶时，如果堆顶已过期，就懒删除继续弹。
+
+这样就能高效维护窗口内的最大/最小值。
+
+---
+
+**3. 动态集合最值查询**
+
+我们想要支持操作：
+
+* `add(x)`
+* `remove(x)`
+* `get_min()`
+
+懒删除堆可以轻松做到，复杂度仍然对数级。
+
+---
+
+**实现原理**
+
+一个典型的懒删除堆结构包含：
+
+1. **一个最小堆**（`heapq` 实现）。
+2. **一个字典/哈希表**（记录哪些元素“已删除但还没清理”）。
+
+伪代码：
+
+```
+push(x):
+    heap.push(x)
+
+remove(x):
+    invalid[x] += 1   # 标记删除
+
+top():
+    while heap 非空 且 heap.top 在 invalid 中:
+        heap.pop()
+        invalid[x] -= 1
+        如果 invalid[x] == 0: 删除键
+    return heap.top
+```
+
+---
+
+**优点**
+
+* 避免堆中间删除，操作简单。
+* 插入、删除标记、弹出保持 **O(log n)**。
+* 实现优先队列 + 删除/更新功能，非常实用。
+
+**缺点**
+
+* 堆中会存放一些“无效元素”，可能导致 **内存占用变大**。
+* 如果长时间不访问堆顶，过期元素不会被清理。
+
+一般在算法场景（如最短路、滑动窗口）中，这个缺点不明显。
+
+**总结**
+
+懒删除堆是一种 **以空间换时间** 的技巧。
+
+* 它不改变堆的底层逻辑，而是在逻辑层面解决“删除/更新”问题。
+* 在 Python 的算法实现中（尤其是 Dijkstra、滑动窗口、任务调度等），是非常高频的模式。
+
+一句话总结：
+
+> **遇到堆中间删除或更新时，别硬删，标记一下，等它到堆顶再删。**
+
+---
+
 ### 堆排序简介
 
 堆排序利用堆的性质来进行排序，时间复杂度为 `O(n log n)`，不稳定排序。
@@ -278,5 +391,9 @@ def heap_sort(nums):
 ### 经典例题
 - [1353. 最多可以参加的会议数目](https://leetcode.cn/problems/maximum-number-of-events-that-can-be-attended/)
 - [2163. 删除元素后和的最小差值](https://leetcode.cn/problems/minimum-difference-in-sums-after-removal-of-elements/)
+
+**懒删除堆**
+- [2349. 设计数字容器系统](https://leetcode.cn/problems/design-a-number-container-system/)
+- [3408. 设计任务管理器](https://leetcode.cn/problems/design-task-manager/)
 
 ---
