--- a/_posts/think-n-code/2025-06-01-Pythonic编程.md
+++ b/_posts/think-n-code/2025-06-01-Pythonic编程.md
@@ -131,9 +131,7 @@ s.zfill(5)  # 输出: "00042"
 
 ---
 
-## 循环语句
-
-### enumerate用法
+## enumerate用法
 
 `enumerate()` 是 Python 内置的一个非常常用的函数，它可以在遍历可迭代对象（如列表、元组等）时，**同时获取元素的索引和元素本身**。
 
@@ -178,7 +176,7 @@ for index, value in enumerate(lst, start=1):
 
 ---
 
-### for else语法
+## for else语法
 
 ```python
 for item in iterable:
@@ -218,7 +216,7 @@ else:
 
 ---
 
-### iter/next用法
+## iter/next用法
 
 `iter()` 和 `next()` 在 Python 中是构建 **迭代器模式** 的核心，很多看似“自动”的语法糖（比如 `for` 循环、生成器）其实背后都用到它们。
 
@@ -318,7 +316,7 @@ print(next(it, None))  # None (不会抛 StopIteration)
 
 ---
 
-### count(1)用法
+## count(1)用法
 
 你问的 `count(1)` 是 **`itertools.count(1)`**，它不是内置函数，而是 Python 标准库 `itertools` 提供的一个工具。
 
@@ -363,6 +361,109 @@ for i in count(10, 2):  # 从10开始，每次+2
 
 ```
 10, 12, 14, 16, 18, 20, 22
+```
+
+---
+
+## zip与zip_longest用法
+
+`zip` 可以将多个可迭代对象（如列表、元组、字符串等）按位置 **一一配对**，返回一个迭代器。
+
+```python
+a = [1, 2, 3]
+b = ['a', 'b', 'c']
+
+z = zip(a, b)
+print(list(z))  
+# [(1, 'a'), (2, 'b'), (3, 'c')]
+```
+
+> 可以理解为：`zip` = “拉链”，把多个序列拉到一起。
+
+---
+
+**处理多个序列**
+
+```python
+a = [1, 2, 3]
+b = ['a', 'b', 'c']
+c = [True, False, True]
+
+print(list(zip(a, b, c)))
+# [(1, 'a', True), (2, 'b', False), (3, 'c', True)]
+```
+
+---
+
+**构造字典**
+
+```python
+keys = ['id', 'name', 'age']
+values = [101, 'Alice', 23]
+
+d = dict(zip(keys, values))
+print(d)
+# {'id': 101, 'name': 'Alice', 'age': 23}
+```
+
+---
+
+**矩阵转置**
+
+```python
+matrix = [
+    [1, 2, 3],
+    [4, 5, 6]
+]
+
+transposed = list(zip(*matrix))
+print(transposed)
+# [(1, 4), (2, 5), (3, 6)]
+```
+
+---
+
+**不同长度的序列**
+
+如果长度不同，`zip` 会 **截断到最短序列**：
+
+```python
+a = [1, 2, 3, 4]
+b = ['a', 'b']
+
+print(list(zip(a, b)))
+# [(1, 'a'), (2, 'b')]
+```
+
+👉 如果想补齐，使用 `itertools.zip_longest`。
+
+```python
+from itertools import zip_longest
+```
+
+---
+
+**默认 `None` 填充**
+
+```python
+from itertools import zip_longest
+
+a = [1, 2, 3, 4]
+b = ['a', 'b']
+
+result = list(zip_longest(a, b))
+print(result)
+# [(1, 'a'), (2, 'b'), (3, None), (4, None)]
+```
+
+**指定填充值**
+
+比如用 `'-'` 补齐：
+
+```python
+result = list(zip_longest(a, b, fillvalue='-'))
+print(result)
+# [(1, 'a'), (2, 'b'), (3, '-'), (4, '-')]
 ```
 
 ---
