--- a/_posts/think-n-code/2025-06-03-Python列表.md
+++ b/_posts/think-n-code/2025-06-03-Python列表.md
@@ -436,3 +436,151 @@ summed = [[x + y for x, y in zip(row_a, row_b)] for row_a, row_b in zip(a, b)]
 ```
 
 ---
+
+## deque
+
+`deque`（double-ended queue，双端队列）是 Python **collections** 模块里的一个高性能容器，支持在队列 **两端** 以 **O(1)** 的时间复杂度进行插入和删除。
+
+```python
+from collections import deque
+```
+
+---
+
+**初始化**
+
+```python
+from collections import deque
+
+# 空队列
+dq = deque()
+
+# 带初始元素
+dq = deque([1, 2, 3])
+
+print(dq)  # deque([1, 2, 3])
+```
+
+---
+
+### 基本操作
+
+**添加元素**
+
+```python
+dq.append(4)        # 右边添加
+dq.appendleft(0)    # 左边添加
+print(dq)           # deque([0, 1, 2, 3, 4])
+```
+
+**删除元素**
+
+```python
+dq.pop()            # 删除右边，返回 4
+dq.popleft()        # 删除左边，返回 0
+print(dq)           # deque([1, 2, 3])
+```
+
+---
+
+**批量扩展**
+
+```python
+dq.extend([4, 5])       # 相当于右边批量 append
+dq.extendleft([-1, -2]) # 从左边批量 append（注意顺序反转）
+print(dq)               # deque([-2, -1, 1, 2, 3, 4, 5])
+```
+
+**指定最大长度（自动丢弃旧数据 → 环形队列）**
+
+```python
+dq = deque(maxlen=3)
+dq.extend([1, 2, 3])
+dq.append(4)
+print(dq)  # deque([2, 3, 4], maxlen=3)  # 1 被丢弃
+```
+
+---
+
+**队列旋转（rotate）**
+
+**关键点：**
+* `rotate(k)` 就是 **循环位移**，不会丢数据。
+* `k` 的正负号决定方向（右移/左移）。
+* 如果 `|k|` 大于长度，会自动取模，相当于 `k % len(dq)`。
+
+```python
+dq = deque([1, 2, 3, 4, 5])
+dq.rotate(2)   # 向右旋转 2 位
+print(dq)      # deque([4, 5, 1, 2, 3])
+
+dq.rotate(-1)  # 向左旋转 1 位
+print(dq)      # deque([5, 1, 2, 3, 4])
+```
+
+---
+
+**清空/反转**
+
+```python
+dq.clear()      # 清空队列
+dq.reverse()    # 原地反转
+```
+
+---
+
+### list vs deque 对比
+
+| 功能/特性             | `list`                   | `deque` (`collections.deque`)            |
+| ----------------- | ------------------------ | ---------------------------------------- |
+| **数据结构类型**        | 动态数组（array-based）        | 双端链表（doubly-linked list, block-based 实现） |
+| **尾部插入 `append`** | ✅ O(1)                   | ✅ O(1)                                   |
+| **尾部删除 `pop()`**  | ✅ O(1)                   | ✅ O(1)                                   |
+| **头部插入**          | ❌ O(n)（整体移动）             | ✅ O(1) `appendleft()`                    |
+| **头部删除**          | ❌ O(n)（整体移动）             | ✅ O(1) `popleft()`                       |
+| **随机访问/修改**       | ✅ O(1)                   | ❌ O(n)（需遍历）                              |
+| **按索引删除**         | ✅ `pop(i)`，O(n)（末尾 O(1)） | ❌ 不支持（需旋转或转 list）                        |
+| **删除指定值**         | ✅ `remove(value)`，O(n)   | ✅ `remove(value)`，O(n)                   |
+| **扩展多个元素**        | ✅ `extend(iterable)`     | ✅ `extend()` / `extendleft()`            |
+| **最大长度限制**        | ❌ 不支持                    | ✅ `maxlen`（自动丢弃旧数据）                      |
+| **旋转操作**          | ❌ 需要切片                   | ✅ `rotate(n)`，O(k)                       |
+| **排序**            | ✅ 内置 `sort()`，`sorted()` | ❌ 需先转为 list                              |
+| **内存局部性**         | 好（连续数组，cache 友好）         | 较差（链表式分块存储）                              |
+| **常见用途**          | 栈（stack）、动态数组、随机访问场景     | 队列（queue）、双端队列（deque）、滑动窗口、流处理           |
+
+---
+
+**内存与性能特征**
+
+* **list**
+
+  * 基于动态数组实现，内存是连续的，**缓存友好**，随机访问性能非常高。
+  * 头部操作需要整体移动，效率低。
+  * 适合 **栈、随机访问、排序** 场景。
+
+* **deque**
+
+  * 基于双端链表（block linked list），支持 **O(1) 头尾插入/删除**。
+  * 不适合随机访问（需要遍历），内存局部性比 `list` 差。
+  * 适合 **队列、双端队列、滑动窗口** 场景。
+
+---
+
+**实际性能对比（示意）**
+
+* **尾部 append/pop**
+  `list` ≈ `deque`，都很快。
+* **头部 append/pop**
+  `deque` 明显快很多（O(1) vs O(n)）。
+* **随机访问**
+  `list` 明显快很多（O(1) vs O(n)）。
+
+---
+
+**总结**
+
+* 如果你需要**随机访问、需要排序、当作栈（后进先出 LIFO）** → 用 `list`。
+* 如果你需要**队列（FIFO）、双端队列、高效头尾操作、固定窗口（`maxlen`）**→ 用 `deque`。
+* **list = 动态数组**，**deque = 双端队列**，二者各有优势。
+
+---
