--- a/_posts/think-n-code/2025-06-03-Python列表.md
+++ b/_posts/think-n-code/2025-06-03-Python列表.md
@@ -463,7 +463,7 @@ print(dq)  # deque([1, 2, 3])
 
 ---
 
-### 基本操作
+### 基本用法
 
 **添加元素**
 
@@ -582,5 +582,126 @@ dq.reverse()    # 原地反转
 * 如果你需要**随机访问、需要排序、当作栈（后进先出 LIFO）** → 用 `list`。
 * 如果你需要**队列（FIFO）、双端队列、高效头尾操作、固定窗口（`maxlen`）**→ 用 `deque`。
 * **list = 动态数组**，**deque = 双端队列**，二者各有优势。
+
+---
+
+好的 👍 我来给你详细介绍 **Python 的 `SortedList`**，它来自第三方库 **[sortedcontainers](https://grantjenks.com/docs/sortedcontainers/)**，不是标准库。
+
+---
+
+## SortedList
+
+* `SortedList` 是一个 **自动保持有序的动态数组**。
+* 功能类似于内置的 `list`，但它会在 **插入/删除时自动排序**，不用你手动调用 `sort()`。
+* 底层是 **分块数组 + 二分查找** 实现的，常见操作效率接近 `O(log n)` 或 `O(n)`，比单纯的 `list` 在需要频繁插入删除时更高效。
+
+安装：
+
+```bash
+pip install sortedcontainers
+```
+
+---
+
+### 基本用法
+
+```python
+from sortedcontainers import SortedList
+
+# 初始化
+sl = SortedList([5, 1, 3])
+print(sl)  # SortedList([1, 3, 5])  # 自动排序
+
+# 添加元素
+sl.add(4)
+print(sl)  # SortedList([1, 3, 4, 5])
+
+# 删除元素
+sl.remove(3)
+print(sl)  # SortedList([1, 4, 5])
+
+# 支持索引访问
+print(sl[0])  # 1
+print(sl[-1]) # 5
+```
+
+---
+
+**插入/删除**
+
+```python
+sl.add(x)       # 插入元素，保持有序
+sl.discard(x)   # 删除元素，如果不存在不会报错
+sl.remove(x)    # 删除元素，如果不存在报错
+```
+
+**查找**
+
+```python
+sl.bisect_left(x)   # 找到 x 应该插入的左边位置
+sl.bisect_right(x)  # 找到 x 应该插入的右边位置
+sl.index(x)         # 查找 x 的索引（不存在会报错）
+```
+
+**切片**
+
+```python
+print(sl[:2])  # SortedList([1, 4])，和 list 类似
+```
+
+**堆替代功能**
+
+```python
+# 最小值
+print(sl[0])   # 最小的元素
+# 最大值
+print(sl[-1])  # 最大的元素
+```
+
+---
+
+### list vs SortedList 对比
+
+* **list**：
+
+  * Python 内置的动态数组。
+  * **不会自动排序**，需要时手动调用 `list.sort()` 或 `sorted()`。
+  * 适合顺序存取，随机访问快。
+
+* **SortedList**（来自 `sortedcontainers` 库）：
+
+  * 一个保持有序的动态数组。
+  * **自动维护排序**，每次插入/删除都能保证顺序。
+  * 内部使用 **分块数组 + 二分查找** 实现。
+
+---
+
+**操作复杂度对比**
+
+| 操作                    | list                       | SortedList                  |
+| --------------------- | -------------------------- | --------------------------- |
+| **索引访问** `lst[i]`     | `O(1)`                     | `O(1)`                      |
+| **尾部插入** `append()`   | `O(1)` (均摊)                | `O(log n)`（要找到插入位置）         |
+| **任意位置插入** `insert()` | `O(n)`                     | `O(log n + n)`（二分查找 + 插入移动） |
+| **删除元素** `remove(x)`  | `O(n)`                     | `O(log n + n)`              |
+| **查找位置** `bisect`     | `O(log n)`（需先 `sort`）      | `O(log n)`（内置支持）            |
+| **保持有序**              | 需要手动 `sort()`，`O(n log n)` | 自动维护，无需手动排序                 |
+| **获取最小/最大值**          | `O(n)`（除非已知有序）             | `O(1)`                      |
+
+---
+
+**适用场景**
+
+* **list**：
+
+  * 数据量大，主要用于顺序遍历、索引访问。
+  * 插入/删除发生在尾部，性能很好。
+  * 不需要频繁保持有序。
+
+* **SortedList**：
+
+  * 需要 **频繁插入/删除，同时保持有序**。
+  * 动态统计：中位数、前 k 大/小元素。
+  * 区间查询：查找某个区间内的元素个数/范围。
 
 ---
