--- a/_posts/think-n-code/2025-08-09-Python集合.md
+++ b/_posts/think-n-code/2025-08-09-Python集合.md
@@ -1,5 +1,5 @@
 ---
-title: "Python集合操作技巧"
+title: "Python哈希结构全解析"
 categories: [think-n-code]
 tags: [programming]
 
@@ -12,8 +12,6 @@ layout: post
 ---
 
 ## 集合(set)
-
-### 基本操作
 
 **创建**
 ```python
@@ -118,8 +116,6 @@ d = {'name': 'Alice', 'age': 25}
 
 ---
 
-### 基本操作
-
 **创建字典**
 ```python
 # 直接定义
@@ -206,7 +202,10 @@ for v in d.values():          # 遍历值
 
 ---
 
-### defaultdict用法
+## defaultdict用法
+
+在 Python 里，普通的 `dict` 如果访问一个 **不存在的 key** 会抛出 `KeyError`。
+而 **`defaultdict`**（来自 `collections` 模块）允许你 **为缺失的 key 自动生成一个默认值**，避免手动判断。
 
 在 Python 的 `collections` 模块中，`defaultdict` 允许你为字典的默认值指定一个工厂函数。当你访问一个不存在的键时，它会自动创建一个默认值。
 
@@ -234,7 +233,7 @@ d2 = defaultdict(lambda: [0])
 
 ---
 
-### OrderedDict用法
+## OrderedDict用法
 
 `collections.OrderedDict` 在 Python 3.7+ 虽然**不再是“保序字典”的唯一选择**（因为普通 `dict` 也保留插入顺序），但它仍有几个**普通 dict 没有的功能**。
 
@@ -292,7 +291,7 @@ d2 = defaultdict(lambda: [0])
      print(d1 == d2)  # True，顺序无关
      ```
 
-4. **可作为队列型映射结构**
+5. **可作为队列型映射结构**
 
    * 因为能在头尾插入/删除键值对，所以它常用来实现：
 
@@ -333,8 +332,6 @@ print(c)  # Counter({'a': 3, 'b': 2, 'c': 1})
 ```
 
 ---
-
-### 基本操作
 
 **创建 `Counter`**
 ```python
@@ -400,7 +397,7 @@ print(c1 | c2)  # 并集（计数取最大值）=> Counter({'a': 3, 'b': 2})
 
 ---
 
-### VS 字典
+与字典对比
 
 | 特性     | 说明                             |                 |
 | ------ | ------------------------------ | --------------- |
@@ -447,125 +444,7 @@ pip install sortedcontainers
 
 ---
 
-### SortedList
-
-* 类似 Python 的 `list`，但始终保持有序。
-* 支持二分查找、切片、快速查找区间。
-* 复杂度：
-
-  * 插入、删除：`O(log n)`
-  * 索引、切片：`O(log n)`
-  * 遍历：`O(n)`
-
-示例：
-
-```python
-from sortedcontainers import SortedList
-
-sl = SortedList([5, 1, 3])
-print(sl)       # SortedList([1, 3, 5])
-
-sl.add(2)
-print(sl)       # SortedList([1, 2, 3, 5])
-
-print(sl[0])    # 1
-print(sl.bisect_left(3))  # 2 (3的位置)
-```
-
----
-
-### SortedSet
-
-* 类似 `set`，但是有序且支持索引。
-* 自动去重，并保持排序。
-* 内部其实是 `SortedList` 的包装。
-
-示例：
-
-```python
-from sortedcontainers import SortedSet
-
-ss = SortedSet([5, 1, 3, 3])
-print(ss)      # SortedSet([1, 3, 5])
-
-ss.add(2)
-print(ss)      # SortedSet([1, 2, 3, 5])
-
-print(ss[1])   # 2
-```
-
----
-
-### SortedDict
-
-* 类似 `dict`，但是 key 始终保持有序。
-* 遍历时按照 key 的顺序。
-* 类似 Java 的 `TreeMap`。
-
-示例：
-
-```python
-from sortedcontainers import SortedDict
-
-sd = SortedDict()
-sd['b'] = 2
-sd['a'] = 1
-sd['c'] = 3
-
-print(sd)          # SortedDict({'a': 1, 'b': 2, 'c': 3})
-print(sd.keys())   # SortedKeysView(SortedDict({'a': 1, 'b': 2, 'c': 3}))
-print(sd.peekitem(0))  # ('a', 1)
-```
-
----
-
-**应用场景**
-
-* **有序数据维护**：实时保持排序（比 `sort()` 更高效）。
-* **滑动窗口**：比如“中位数维护”问题（LeetCode 高频）。
-* **区间查找**：快速二分查找。
-* **LRU、排名系统**：可以根据顺序快速获取前 k 或后 k 个元素。
-
----
-
-### 对比`SortedList`和`heapq`
-
-**概括：**
-
-* **`heapq`**：适合 **动态获取最小值/最大值**，比如优先队列、Dijkstra 算法、调度任务。
-* **`SortedList`**：适合需要 **全局有序视图** 的情况，比如排名统计、二分查找、第 k 小元素、区间查询。
-
-可以这么理解：
-
-* 只关心“堆顶” → 用 **`heapq`**。
-* 关心“全局顺序/任意排名” → 用 **`SortedList`**。
-
----
-
-**共性**
-
-* 都可以处理一组数字/元素。
-* 都能支持插入和取出「某些有序位置」的元素。
-* 都是 Python 里常见的“有序容器”解决方案。
-
----
-
-**核心区别**
-
-| 特性        | `SortedList` (`sortedcontainers`)   | `heapq`（最小堆）     |
-| --------- | ----------------------------------- | ---------------- |
-| 数据结构      | 动态数组 + 二分查找                         | 二叉堆（数组实现）        |
-| 是否全局有序    | 全部保持有序                              | 只保证堆顶最小          |
-| 插入复杂度     | O(log n) 插入 + O(n) 移动 → 均摊接近 O(log n) | O(log n)         |
-| 删除最小值     | O(1)（取第一个元素）                        | O(log n)（heappop） |
-| 删除任意元素    | O(log n + n)（二分查找 + 删除）             | 不支持，需要线性查找 O(n)  |
-| 查找第 k 小元素 | O(1)（直接索引）                          | O(n log k) 或堆转排序 |
-| 遍历        | 升序遍历 O(n)                           | 无序，只能 pop 出来才能得到排序结果 |
-| 应用场景      | 需要全局有序视图（排名、区间查询、二分搜索）              | 只关心最小值/最大值（优先队列、调度） |
-
----
-
-### 与Java集合框架的对应
+**与Java集合框架的对应**
 
 Java 标准库（`java.util`）里已经有对应的“有序”集合：
 
@@ -594,5 +473,132 @@ Java 标准库（`java.util`）里已经有对应的“有序”集合：
 
   * Java 没有直接对应的容器。
   * 但可以用 `ArrayList` + `Collections.binarySearch()` + 手动插入，或者用 `PriorityQueue`（堆，但只能保证堆顶有序，不是全局排序）。
+
+---
+
+## SortedSet
+
+`SortedSet` 来自 **`sortedcontainers`** 库，是一个 **有序、不重复** 的集合数据结构。
+它的行为类似 `set`，但额外提供了 **自动排序** 的特性。
+
+---
+
+**基本特性**
+
+* **不重复**：和 `set` 一样，保证元素唯一。
+* **有序**：元素总是保持升序排列。
+* **可索引**：和列表一样，可以用下标访问。
+* **基于 `SortedList` 实现**：内部其实就是一个 `SortedList`，外层加了去重逻辑。
+
+---
+
+**常见操作**
+
+```python
+from sortedcontainers import SortedSet
+
+s = SortedSet([3, 1, 4, 1, 5, 9])
+
+print(s)       # SortedSet([1, 3, 4, 5, 9])  自动去重 + 排序
+print(3 in s)  # True   成员检测 O(log n)
+print(s[0])    # 1      支持下标访问
+print(s[-1])   # 9      最大值
+```
+
+**插入与删除**
+
+```python
+s.add(2)       
+print(s)       # SortedSet([1, 2, 3, 4, 5, 9])
+
+s.discard(4)
+print(s)       # SortedSet([1, 2, 3, 5, 9])
+```
+
+**集合操作**
+
+支持和 `set` 一样的集合运算：
+
+```python
+a = SortedSet([1, 3, 5])
+b = SortedSet([3, 4, 5])
+
+print(a | b)  # 并集  -> SortedSet([1, 3, 4, 5])
+print(a & b)  # 交集  -> SortedSet([3, 5])
+print(a - b)  # 差集  -> SortedSet([1])
+```
+
+---
+
+**复杂度对比**
+
+| 操作            | set               | SortedSet   |
+| ------------- | ----------------- | ----------- |
+| **插入/删除**     | `O(1)` 平均         | `O(log n)`  |
+| **成员检测 `in`** | `O(1)` 平均         | `O(log n)`  |
+| **取最小/最大值**   | `O(n)`            | `O(1)`      |
+| **有序遍历**      | 需要排序，`O(n log n)` | 直接支持，`O(n)` |
+| **索引访问**      | ❌ 不支持             | ✅ `O(1)`    |
+
+---
+
+## SortedDict
+
+`SortedDict` 来自 **`sortedcontainers`** 库，是一个 **键有序的字典**。
+它的行为类似 Python 内置的 `dict`，但有以下核心区别：
+
+* **自动保持 key 的升序排序**
+* **支持按顺序遍历/索引访问**
+* **基于 `SortedList` + `dict` 实现**
+
+---
+
+**基本用法**
+
+```python
+from sortedcontainers import SortedDict
+
+sd = SortedDict()
+sd["b"] = 2
+sd["a"] = 1
+sd["c"] = 3
+
+print(sd)   # SortedDict({'a': 1, 'b': 2, 'c': 3})  自动排序
+```
+
+**索引访问**
+
+```python
+print(sd.keys())     # SortedKeysView(SortedDict({'a': 1, 'b': 2, 'c': 3}))
+print(sd.values())   # SortedValuesView(SortedDict({'a': 1, 'b': 2, 'c': 3}))
+print(sd.items())    # Items 也是有序的
+
+print(sd.peekitem(0))   # ('a', 1) 最小键
+print(sd.peekitem(-1))  # ('c', 3) 最大键
+```
+
+---
+
+**插入 & 删除**
+
+```python
+sd["d"] = 4     # 插入
+print(sd)       # SortedDict({'a': 1, 'b': 2, 'c': 3, 'd': 4})
+
+del sd["b"]     # 删除
+print(sd)       # SortedDict({'a': 1, 'c': 3, 'd': 4})
+```
+
+---
+
+**复杂度对比**
+
+| 操作              | dict                     | SortedDict            |
+| --------------- | ------------------------ | --------------------- |
+| **插入/删除**       | `O(1)` 平均                | `O(log n)`            |
+| **查找键值**        | `O(1)` 平均                | `O(log n)`            |
+| **有序遍历**        | ❌ 无序 (3.7+ 保证插入顺序，但不是排序) | ✅ 升序，`O(n)`           |
+| **最小/最大键**      | ❌ 需遍历                    | ✅ `O(1)` (`peekitem`) |
+| **按索引取第 k 个元素** | ❌ 不支持                    | ✅ `O(1)`              |
 
 ---
