--- a/_posts/2025-03-22-背包问题.md
+++ b/_posts/2025-03-22-背包问题.md
@@ -353,13 +353,21 @@ print(knapsack_unbounded(n - 1, W))  # 输出 15
 ## 经典例题
 
 **0-1背包**
-- [416. 分割等和子集](https://leetcode.cn/problems/partition-equal-subset-sum/)
-- [494. 目标和](https://leetcode.cn/problems/target-sum/)
-- [2787. 将一个数字表示成幂的和的方案数](https://leetcode.cn/problems/ways-to-express-an-integer-as-sum-of-powers/)
+
+| 题号 | 题目 | 标签 |
+|------|------|------|
+| 416 | [分割等和子集](https://leetcode.cn/problems/partition-equal-subset-sum/) | 模板题 |
+| 494 | [目标和](https://leetcode.cn/problems/target-sum/) | 提升题 |
+| 2787 | [将一个数字表示成幂的和的方案数](https://leetcode.cn/problems/ways-to-express-an-integer-as-sum-of-powers/) | 提升题 |
+| 3685 | [含上限元素的子序列和](https://leetcode.cn/problems/subsequence-sum-after-capping-elements/) | 综合题 |
+
 
 **完全背包**
-- [322. 零钱兑换](https://leetcode.cn/problems/coin-change/)
-- [518. 零钱兑换 II](https://leetcode.cn/problems/coin-change-ii/)
-- [3592. 硬币面值还原](https://leetcode.cn/problems/inverse-coin-change/)
+
+| 题号 | 题目 | 标签 |
+|------|------|------|
+| 322  | [零钱兑换](https://leetcode.cn/problems/coin-change/) | 模板题 |
+| 518  | [零钱兑换 II](https://leetcode.cn/problems/coin-change-ii/) | 模板题 |
+| 3592 | [硬币面值还原](https://leetcode.cn/problems/inverse-coin-change/) | 陷阱题 |
 
 ---
